# Always_Memo

./: .env.example  .gitignore  AGENTS.md  README.md  db_lecture_keywords_study_notes.md  db_study_memonote_week9_to_end.md  index.html  package-lock.json  package.json  supabase_todo.md  tailwind.config.js  vite.config.ts  yoru_task.md
docs/plans/: acceptance-checklist.md  codex-implementation-roadmap.md  codex-review-prompt.md  codex-start-here.md  file-placement-manifest.md  fitness-tab-roadmap.md  version-synthesis.md
docs/plans/codex-prompts/: phase3-fitness-full-crud.md  (+1 more)
docs/specs/: auth-rls-share.md  backfill-data-trust.md  codex-command-master.md  design-system-luxury-dashboard.md  fitness-full-crud-sync.md  fitness-tab.md  life-command-center.md  native-quick-capture.md  original-expanded-command-spec.md  platform-compatibility.md  project-version-reference.md  quick-action-expansion.md  record-aggregation-api.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: README.codex.md  default.json  desktop-native.json
src-tauri/icons/: icon.icns
src-tauri/src/: README.codex.md  lib.rs  main.rs
src/app/: App.tsx  useLocalSyncMemo.ts  useThemeMode.ts
src/components/: EmptyState.tsx  HeaderBar.tsx  SettingsPanel.tsx  StatusBanner.tsx
src/types/: entities.ts  index.ts
supabase/: README.codex.md  schema.sql
supabase/migrations/: 20260609_auth_rls_life_command_center.sql  20260609_backfill_data_trust.sql  20260610060733_capture_remote_update.sql  20260613_cardio_metrics.sql  20260705_today_tasks_planned_date.sql
(+65 files in other folders)
